#184 converted leaderboard aveerages to integers from floats by rounding them, also aligned header for average correctly

--- a/src/scss/views/_leaderboard.scss
+++ b/src/scss/views/_leaderboard.scss
@@ -13,7 +13,11 @@
         .column {
             margin: 10px;
         }
-        margin: 0 3em;
+        margin: 0 0 0 3em;
+
+        .score-header {
+            text-align: right;
+        }
     }
 
     .section {
